trigger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-listener
  namespace: tekton-demo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: hello-listener.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-hello-listener
                port:
                  number: 8080
